# sdf-desktop

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-desktop.yml
scripts/: generate-icons.sh
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: SDFDocument.icns  icon.icns
src-tauri/src/: error.rs  lib.rs  macos_fullscreen.rs  main.rs
src-tauri/src/commands/: fs.rs  keychain.rs  mod.rs  open.rs  sign.rs  validator.rs
src-tauri/src/sdf/: certstore.rs  mod.rs  signer.rs  tsa.rs  validator.rs
src/components/command/: CommandPalette.tsx
src/components/dashboard/: DashboardUsageChart.tsx
src/components/error/: AppErrorBoundary.tsx
src/components/layout/: AppShell.tsx  CloudConnectivityBadge.tsx  DocumentTabBar.tsx  Header.tsx  Sidebar.tsx  TitleBar.tsx
src/components/notifications/: ToastProvider.tsx  toastVariantConfig.ts
src/components/reader/: DataTree.tsx  MetaCard.tsx  ReaderRawPanel.tsx  ReaderSchemaPanel.tsx  SignatureDetailPanel.tsx
src/components/sign/: CertPickerStep.tsx  SignSdfDialog.tsx
src/components/ui/: badge.tsx  button.tsx  separator.tsx
src/components/updater/: UpdateAvailableDialog.tsx  UpdaterProvider.tsx
src/components/workspace/: RecentFilesTable.tsx
src/hooks/: useAuth.ts  useCloudSync.ts  useNetworkOnline.ts  useSdfOpenListener.ts
src/i18n/: bootstrap.ts  index.ts  localeLabel.ts
src/i18n/locales/: de-DE.json  en-US.json  fr-FR.json
src/lib/: formatBytes.ts  greeting.ts  portalUrl.ts  queryKeys.ts  utils.ts
src/lib/api/: authErrorMessage.ts  client.ts  httpFetch.ts
src/lib/api/endpoints/: auth.ts  billing.ts  documents.ts
src/lib/tauri/: dialog.ts  fs.ts  keychain.ts  open.ts  sign.ts  validator.ts
src/lib/updater/: fetchUpdate.ts  installUpdate.ts
src/schemas/: gov-customs-declaration.ts  gov-health-report.ts  gov-permit-application.ts  gov-tax-declaration.ts  index.ts  invoice.ts  nomination.ts  purchase-order.ts  types.ts
src/shims/: node-crypto-shim.ts
src/stores/: authStore.ts  documentStore.ts  localeStore.ts  themeStore.ts
src/views/Auth/: AuthView.tsx
src/views/Cloud/: CloudSyncView.tsx
src/views/Dashboard/: DashboardView.tsx
src/views/Document/: DocumentReaderView.tsx
src/views/Documents/: DocumentsView.tsx
src/views/Producer/: ProducerDocTypeSelector.tsx  ProducerFormRenderer.tsx  ProducerJsonPreview.tsx  ProducerView.tsx
src/views/Settings/: SettingsBillingSection.tsx  SettingsView.tsx
