[package]
name = "sdf-desktop"
version = "0.1.0"
description = "SDF Desktop — Smart Document Format client by Etapsky Inc."
authors = ["Yunus YILDIZ <yunus.yildiz@etapsky.com>"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "sdf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
