[package]
name = "sdf-desktop"
version = "0.1.0"
description = "SDF Desktop — Smart Document Format client by Etapsky Inc."
authors = ["Yunus YILDIZ <yunus.yildiz@etapsky.com>"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "sdf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSNotification",
    "NSObject",
    "NSOperation",
    "NSString",
    "block2",
] }
