[package]
name = "sdf-desktop"
version = "0.1.0"
description = "SDF Desktop — Smart Document Format client by Etapsky Inc."
authors = ["Yunus YILDIZ <yunus.yildiz@etapsky.com>"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "sdf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"

# ── Cryptography & encoding ────────────────────────────────────────────────────
sha2     = "0.10"
hex      = "0.4"
base64ct = { version = "1", features = ["alloc"] }
zip      = "2"
# X.509 certificate parsing (RustCrypto)
x509-cert = "0.2"
der       = { version = "0.7", features = ["alloc"] }
# ECDSA P-256 signature verification
p256      = { version = "0.13", features = ["ecdsa", "pkcs8"] }
# RSA PKCS#1 v1.5 verification
rsa       = { version = "0.9", features = ["sha2"] }
signature = "2"
# Async HTTP for RFC 3161 TSA requests
reqwest   = { version = "0.12", features = ["rustls-tls"], default-features = false }
# Random nonce for TSA
rand      = "0.8"
# Timestamp formatting
chrono    = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSNotification",
    "NSObject",
    "NSOperation",
    "NSString",
    "block2",
] }
# macOS Keychain / Security.framework for X.509 identity access
security-framework = { version = "2", features = ["OSX_10_15"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows CertStore + NCrypt for X.509 identity access
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
